<resources>
    <string name="paused_app_notification_placeholder_text_template">You said %1$s and lorem ipsum
        dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel
        semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis.
        Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper
        ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis
        viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec
        tortor.
    </string>
    <string name="app_name">Interval Timer</string>
    <string name="paused_app_notification_title_template">Paused app: %1$s</string>
    <string name="starting_sets_main">  12   </string>
    <string name="starting_sets_timer">12</string>
    <string name="starting_work">01 : 30</string>
    <string name="starting_rest">00 : 30</string>
    <string name="text_sets">Sets </string>
    <string name="text_work">Work Interval</string>
    <string name="text_rest">Rest Interval</string>
    <string name="text_motivational_timer">Work It</string>
    <string name="text_motivational_timer_2">Rest Now</string>
    <string name="text_paused_timer">Paused</string>
    <string name="btn_start">Start</string>
    <string name="btn_end">Hold To End</string>
    <string name="btn_continue">Continue</string>
    <string name="btn_pause">Pause</string>
    <string name="sign_minus">-</string>
    <string name="sign_plus">+</string>
    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
</resources>
