<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#66a0ff"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/setsText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="@font/monkey"
                    android:gravity="center_horizontal"
                    android:text="@string/text_sets"
                    android:textColor="#000"
                    android:textSize="32sp" />

                <LinearLayout
                    android:id="@+id/setsLinear"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@+id/setsText">

                    <Button
                        android:id="@+id/setsMinusBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#ffffff"
                        android:fontFamily="@font/monkey"
                        android:onClick="decrementSets"
                        android:text="@string/sign_minus"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/setsQuantity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:fontFamily="@font/monkey"
                        android:freezesText="true"
                        android:gravity="center_horizontal"
                        android:text="@string/starting_sets_main"
                        android:textColor="#000"
                        android:textSize="26sp" />

                    <Button
                        android:id="@+id/setsPlusBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#ffffff"
                        android:fontFamily="@font/monkey"
                        android:onClick="incrementSets"
                        android:text="@string/sign_plus"
                        android:textSize="24sp" />

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#000">

            </View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/workText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/monkey"
                    android:gravity="center_horizontal"
                    android:text="@string/text_work"
                    android:textColor="#000"
                    android:textSize="32sp"
                    app:layout_constraintTop_toBottomOf="@+id/setsLinear" />

                <LinearLayout
                    android:id="@+id/workLinear"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@+id/workText">

                    <Button
                        android:id="@+id/workMinusBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#ffffff"
                        android:fontFamily="@font/monkey"
                        android:onClick="decrementWork"
                        android:text="@string/sign_minus"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/workQuantity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:fontFamily="@font/monkey"
                        android:freezesText="true"
                        android:gravity="center_horizontal"
                        android:text="@string/starting_work"
                        android:textColor="#000"
                        android:textSize="26sp" />

                    <Button
                        android:id="@+id/workPlusBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#ffffff"
                        android:fontFamily="@font/monkey"
                        android:onClick="incrementWork"
                        android:text="@string/sign_plus"
                        android:textSize="24sp" />

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#000">

            </View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/restText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/monkey"
                    android:gravity="center_horizontal"
                    android:text="@string/text_rest"
                    android:textColor="#000"
                    android:textSize="32sp"
                    app:layout_constraintTop_toBottomOf="@+id/workLinear" />

                <LinearLayout
                    android:id="@+id/restLinear"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@+id/restText">

                    <Button
                        android:id="@+id/restMinusBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#ffffff"
                        android:fontFamily="@font/monkey"
                        android:onClick="decrementRest"
                        android:text="@string/sign_minus"
                        android:textSize="24sp" />

                    <TextView

                        android:id="@+id/restQuantity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="3"
                        android:fontFamily="@font/monkey"
                        android:freezesText="true"
                        android:gravity="center_horizontal"
                        android:text="@string/starting_rest"
                        android:textColor="#000"
                        android:textSize="26sp" />

                    <Button
                        android:id="@+id/restPlusBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#ffffff"
                        android:fontFamily="@font/monkey"
                        android:onClick="incrementRest"
                        android:text="@string/sign_plus"
                        android:textSize="24sp" />

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#000">

            </View>

            <Button
                android:id="@+id/startBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:background="#ffffff"
                android:fontFamily="@font/monkey"
                android:onClick="timerStart"
                android:text="@string/btn_start"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="24sp"
                android:textStyle="bold"
                android:visibility="visible" />

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>